<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_fibonacci_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="160dp"
        android:onClick="onClickFibonacci"
        android:text="@string/btn_fibonacci_main"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/btn_encrypt_decrypt_main"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_encrypt_decrypt_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="onClickEncrypt_Decrypt"
        android:text="@string/btn_encrypt_decrypt_main"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_fibonacci_main" />

    <Button
        android:id="@+id/btn_calculadora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:onClick="onClickCalculator"
        android:text="@string/btn_calculadora"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@+id/btn_encrypt_decrypt_main"
        app:layout_constraintTop_toBottomOf="@+id/btn_encrypt_decrypt_main" />

</androidx.constraintlayout.widget.ConstraintLayout>